demo-pod-httpd.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-demo-httpd
  labels:
    app: pod-demo-httpd
    type: front-end
spec:
  containers:
  - name: httpd
    image:  httpd
    resources:
      requests:
        memory: "500M"
      limits:
        memory: "500M"
