demo-cluster-ip-1.yml
apiVersion: v1
kind: Service
metadata:  
  name: cluster-ip-demo
spec:
  selector:    
    app: pod-demo
    type: front-end
  type: ClusterIP
  ports:  
  - name: http
    port: 6667
    targetPort: 6667
    protocol: TCP
