demo-service-httpd.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-service-httpd
spec:
  selector:
    app: pod-demo-httpd
    type: front-end
  type: NodePort
  ports:
  - port: 8080 ## service 
    targetPort: 80 ## pod
