demo-service-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-service-nginx
spec:
  selector:
    app: pod-demo-nginx
    type: front-end
  type: NodePort
  ports:
  - port: 8080 ## service 
    targetPort: 80 ## pod
    protocol: TCP
