demo-service-tomcat.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-service-tomcat
spec:
  selector:
    app: pod-demo-tomcat
    type: backend
  type: NodePort
  ports:
  - port: 8081 ## service 
    targetPort: 8080 ## pod
    protocol: TCP
